--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -14,24 +14,34 @@
                     <div><strong>{{ _('Serial number') }}:</strong> {{ serial }}</div>
                     {% if laserhead_serial or laserhead_model == 'S' %}
                         <div><strong>{{ _('Laser head') }}:</strong>
-                        <ul class="list-unstyled">
-                        {% if laserhead_serial %}
-                            <li><strong>{{ _('Serial number') }}:</strong> {{ laserhead_serial }}</li>
-                        {% endif %}
-                        {% if laserhead_model == 'S' %}
-                            <li><strong>{{ _('Model') }}:</strong> {{ laserhead_model }}</li>
-                        {% endif %}
-                        </ul>
+                            <ul class="list-unstyled">
+                                {% if laserhead_serial %}
+                                    <li><strong>{{ _('Serial number') }}:</strong> {{ laserhead_serial }}</li>
+                                {% endif %}
+                                {% if laserhead_model == 'S' %}
+                                    <li><strong>{{ _('Model') }}:</strong> {{ laserhead_model }}</li>
+                                {% endif %}
+                            </ul>
                         </div>
                     {% endif %}
+                    <div data-bind="visible: airfilter_serial() != undefined || (airfilter_model() != undefined && airfilter_model() != 'Unknown')">
+                        <strong>{{ _('Air Filter System') }}:</strong>
+                        <ul class="list-unstyled">
+                            <li data-bind="visible: airfilter_serial()"><strong>{{ _('Serial number') }}:</strong> <span
+                                    data-bind="text: airfilter_serial()"></span></li>
+                            <li data-bind="visible: airfilter_model() != undefined && airfilter_model() != 'Unknown'">
+                                <strong>{{ _('Model') }}:</strong> <span data-bind="text: airfilter_model()"></span>
+                            </li>
+                        </ul>
+                    </div>
                     {% if mac_addrs %}
-                    <div><strong>{{ _('Network interfaces') }}:</strong>
-						<ul class="list-unstyled">
-							{% for ifc, mac in mac_addrs.iteritems() %}
-							<li>{{ ifc }} (MAC: {{ mac }})</li>
-							{% endfor %}
-						</ul>
-					</div>
+                        <div><strong>{{ _('Network interfaces') }}:</strong>
+                            <ul class="list-unstyled">
+                                {% for ifc, mac in mac_addrs.iteritems() %}
+                                    <li>{{ ifc }} (MAC: {{ mac }})</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     {% endif %}
                 </ul>
             </div>
@@ -56,8 +66,11 @@
                 <h5>Support data</h5>
                 <div class="controls">
                     <ul>
-                        <div><strong>Total usage:</strong> <span id="settings_mrbeam_about_support_total_usage_hours"></span> hrs</div>
-                        <div><strong>mrb_state:</strong> <span id="settings_mrbeam_about_support_mrb_state"></span></div>
+                        <div><strong>Total usage:</strong> <span
+                                id="settings_mrbeam_about_support_total_usage_hours"></span> hrs
+                        </div>
+                        <div><strong>mrb_state:</strong> <span id="settings_mrbeam_about_support_mrb_state"></span>
+                        </div>
                     </ul>
                 </div>
             </div>
@@ -73,15 +86,20 @@
                             {% for link in document.document_links | sort_enum(attribute='language') %}
                                 <a href="{{ link.url }}" target="_blank"> {{ link.language.value }} </a> |
                             {% endfor %}
-                            {{ _('get the latest versions') }} <a href="{{ mrbeamorg_downloads }}" target="_blank">{{ _('online') }}</a>
+                            {{ _('get the latest versions') }} <a href="{{ mrbeamorg_downloads }}"
+                                                                  target="_blank">{{ _('online') }}</a>
                         </div>
                     {% endfor %}
 
-                    <div><strong>{{ _('Online Support Portal') }}:</strong> <a href="https://www.mr-beam.org/support" target="_blank">mr-beam.org/support</a></div>
+                    <div><strong>{{ _('Online Support Portal') }}:</strong> <a href="https://www.mr-beam.org/support"
+                                                                               target="_blank">mr-beam.org/support</a>
+                    </div>
                     <div><strong>{{ _('Privacy Policies') }}:</strong>
                         <a href="http://shop.mr-beam.org/privacy" target="_blank">{{ _('Mr Beam Web Site') }}</a> |
-                        <a href="/plugin/findmymrbeam/static/docs/findmrbeamorg_privacy_policy.pdf" target="_blank">{{ _('find.mr-beam service') }}</a> |
-                        <a href="{{ _('/plugin/mrbeam/static/docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') }}" target="_blank">{{ _('Mr Beam Analytics') }}</a>
+                        <a href="/plugin/findmymrbeam/static/docs/findmrbeamorg_privacy_policy.pdf"
+                           target="_blank">{{ _('find.mr-beam service') }}</a> |
+                        <a href="{{ _('/plugin/mrbeam/static/docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') }}"
+                           target="_blank">{{ _('Mr Beam Analytics') }}</a>
                     </div>
                 </ul>
             </div>
@@ -92,7 +110,8 @@
             <h5>{{ _('Links') }}</h5>
             <div class="controls">
                 <ul>
-                    <div><strong>{{ _('Website') }}:</strong> <a href="https://www.mr-beam.org" target="_blank"> mr-beam.org</a></div>
+                    <div><strong>{{ _('Website') }}:</strong> <a href="https://www.mr-beam.org" target="_blank">
+                        mr-beam.org</a></div>
                     <div><strong>{{ _('Social media') }}:</strong>
                         <a href="https://www.facebook.com/mrbeamlasercutter/" target="_blank">Facebook</a> |
                         <a href="https://www.instagram.com/mrbeamlasers/" target="_blank">Instagram</a> |
@@ -102,11 +121,20 @@
                         <a href="https://www.linkedin.com/company/mrbeamlasers" target="_blank">LinkedIn</a> |
                         <a href="https://www.tiktok.com/@mrbeamlasers" target="_blank">TikTok</a>
                     </div>
-                    <div><strong>{{ _('Official user group') }}</strong> {{ _('on Facebook') }} ({{ _('German') }}): <a href="https://www.facebook.com/groups/officialmrbeamusers/" target="_blank"> Official Mr Beam Lasers User Group</a></div>
-                    <div><strong>{{ _('find.mr-beam service') }}:</strong> <a href="http://find.mr-beam.org" target="_blank"> find.mr-beam.org</a></div>
-                    <div><strong>{{ _('Online resources') }}:</strong> <a href="{{ mrbeamorg_downloads }}" target="_blank"> {{ _('Mr Beam Downloads') }}</a></div>
-                    <div><strong>{{ _('Source code') }}:</strong> <a href="https://github.com/mrbeam" target="_blank"> github.com/mrbeam</a></div>
-                    <div><strong>{{ _('Recommend Mr Beam') }}</strong> {{ _("and earn cashback") }}: <a href="https://www.aklamio.com/community/shops/mrbeam_de" target="_blank">aklamio.com</a></div>
+                    <div><strong>{{ _('Official user group') }}</strong> {{ _('on Facebook') }} ({{ _('German') }}): <a
+                            href="https://www.facebook.com/groups/officialmrbeamusers/" target="_blank"> Official Mr
+                        Beam Lasers User Group</a></div>
+                    <div><strong>{{ _('find.mr-beam service') }}:</strong> <a href="http://find.mr-beam.org"
+                                                                              target="_blank"> find.mr-beam.org</a>
+                    </div>
+                    <div><strong>{{ _('Online resources') }}:</strong> <a href="{{ mrbeamorg_downloads }}"
+                                                                          target="_blank"> {{ _('Mr Beam Downloads') }}</a>
+                    </div>
+                    <div><strong>{{ _('Source code') }}:</strong> <a href="https://github.com/mrbeam" target="_blank">
+                        github.com/mrbeam</a></div>
+                    <div><strong>{{ _('Recommend Mr Beam') }}</strong> {{ _("and earn cashback") }}: <a
+                            href="https://www.aklamio.com/community/shops/mrbeam_de" target="_blank">aklamio.com</a>
+                    </div>
                 </ul>
             </div>
         </div>
